# geovideo-env-check

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  package.json
demo-app/: index.html  package.json
demo-app/src/: main.js
src/app/: AppContext.cpp  AppContext.h  AppInfo.h  AppLogger.cpp  AppLogger.h  AppSettings.cpp  AppSettings.h  AppTheme.cpp  AppTheme.h  MainWindow.cpp  MainWindow.h  main.cpp
src/app/widgets/: EventTimelineWidget.cpp  EventTimelineWidget.h  PlaceholderWidget.cpp  PlaceholderWidget.h  SpatialViewWidget.cpp  SpatialViewWidget.h  VideoViewerWidget.cpp  VideoViewerWidget.h
src/application/common/: ServiceResult.h
src/application/services/: EventReviewService.cpp  EventReviewService.h  ProjectService.cpp  ProjectService.h  VideoImportService.cpp  VideoImportService.h
src/core/domain/common/: EntityId.cpp  EntityId.h  Severity.cpp  Severity.h  TimeRange.cpp  TimeRange.h
src/core/domain/event/: Event.cpp  Event.h
src/core/domain/project/: Project.cpp  Project.h
src/core/domain/spatial/: Camera.cpp  Camera.h  Roi.cpp  Roi.h
src/core/domain/video/: VideoSource.cpp  VideoSource.h
src/core/repositories/: CameraRepository.h  EventRepository.h  ProjectRepository.h  RoiRepository.h  VideoSourceRepository.h
src/infrastructure/database/: DatabaseConnection.cpp  DatabaseConnection.h  DatabaseManager.cpp  DatabaseManager.h  SchemaMigrator.cpp  SchemaMigrator.h  SqliteStatement.cpp  SqliteStatement.h
src/infrastructure/repositories/sqlite/: SqliteCameraRepository.cpp  SqliteCameraRepository.h  SqliteEventRepository.cpp  SqliteEventRepository.h  SqliteProjectRepository.cpp  SqliteProjectRepository.h  SqliteRoiRepository.cpp  SqliteRoiRepository.h  SqliteVideoSourceRepository.cpp  SqliteVideoSourceRepository.h
src/video/: VideoMetadata.cpp  VideoMetadata.h  VideoMetadataReader.h
src/video/opencv/: OpenCvVideoMetadataReader.cpp  OpenCvVideoMetadataReader.h
